	  before the corresponding data, which allows the receiver to
	  allocate data correctly, and to submit the matching receive of
	  the envelope.
  * New STARPU_COMMUTE flag which can be passed along STARPU_W or STARPU_RW to
    let starpu commute write accesses.

Small features:
  * Add cl_arg_free field to enable automatic free(cl_arg) on task
    destroy.

StarPU 1.1.0 (svn revision xxxx)
==============================================

New features:
  * OpenGL interoperability support.
  * Capability to store compiled OpenCL kernels on the file system
  * Capability to load compiled OpenCL kernels
  * Performance models measurements can now be provided explicitly by
    applications.
  * Capability to emit communication statistics when running MPI code
  * Add starpu_unregister_submit, starpu_data_acquire_on_node and
    starpu_data_invalidate_submit
  * New functionnality to wrapper starpu_insert_task to pass a array of
	data_handles via the parameter STARPU_DATA_ARRAY
  * Enable GPU-GPU direct transfers.
  * GCC plug-in
	- Add `registered' attribute
	- A new pass was added that warns about the use of possibly
	  unregistered memory buffers.
  * SOCL
        - Manual mapping of commands on specific devices is now
	  possible
        - SOCL does not require StarPU CPU tasks anymore. CPU workers
          are automatically disabled to enhance performance of OpenCL
          CPU devices
  * New interface: COO matrix.
  * Data interfaces: The pack operation of user-defined data interface
    defines a new parameter count which should be set to the size of
    the buffer created by the packing of the data.
  * MPI:
        - Communication statistics for MPI can only be enabled at
	  execution time by defining the environment variable
	  STARPU_COMM_STATS
        - Communication cache mechanism is enabled by default, and can
	  only be disabled at execution time by setting the
	  environment variable STARPU_MPI_CACHE to 0.